<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_network_name"
        android:inputType="textCapWords"
        android:key="PK network name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_network_name" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_timeout"
        android:dialogTitle="@string/pref_dialog_title_timeout"
        android:inputType="number"
        android:key="PK timeout"
        android:title="@string/pref_title_timeout" />


</PreferenceScreen>
